--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   provider: ^6.0.5
   iconly: ^1.0.1
   dio: ^5.3.3
-  uuid: ^4.2.1
+  uuid: ^4.2.2
   flutter_svg: ^2.0.9
   mobile_scanner: ^3.5.2
   qr_flutter: ^4.1.0
@@ -36,10 +36,14 @@ dependencies:
   timeline_tile: ^2.0.0
   latlng: ^1.0.0
   geolocator: ^10.1.0
+  gherkin: ^2.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
+  test: any
 
   flutter_lints: ^3.0.1
   mocktail: ^1.0.1
